kubernetes/setup.yaml
# kubernetes/setup.yaml
---
# --- Namespace para organizar os recursos da aplicação ---
apiVersion: v1
kind: Namespace
metadata:
  # O nome do namespace é definido aqui uma única vez.
  name: smart-remedy
